<resources>
    <string name="app_name">End2EndMessaging</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="we_will_send_you_a_verification_code">We will send you a verification code</string>
    <string name="phone_number">Phone Number</string>
    <string name="next">Next</string>
    <string name="verify_your_phone_number">Verify your phone number</string>
    <string name="enter_the_6_digit_code_sent_to">Enter the 6-digit code sent to</string>
    <string name="enter_your_code">Enter your code</string>
    <string name="verify">Verify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="androidicon">androidIcon</string>
    <string name="logout">Logout</string>
    <string name="chat">Chat</string>
    <string name="settings">Settings</string>
    <string name="create_profile">Create Profile</string>
    <string name="save">Save</string>
    <string name="about">About</string>
    <string name="name">Name</string>
    <string name="available">Available</string>
    <string name="busy">Busy</string>
    <string name="at_school">At school</string>
    <string name="at_the_movies">At the movies</string>
    <string name="at_the_gym">At the gym</string>
    <string name="at_home">At home</string>
    <string name="camerapicture">cameraPicture</string>
    <string name="count_timer">Count Timer</string>
    <string name="resend_code">Resend Code</string>
    <string name="contact">Contact</string>
    <string name="person_icon">Person Icon</string>
    <string name="surname">Surname</string>
    <string name="phone_icon">Phone Icon</string>
    <string name="save_person">Save Person</string>
    <string name="full_name">Full Name</string>
    <string name="profile_image">Profile Image</string>
    <string name="message">Message</string>
    <string name="message_sender">Message Sender</string>
    <string name="left_chat_message">Left Chat Message</string>
    <string name="right_chat_message">Right Chat Message</string>
    <string name="last_message">Last Message</string>
</resources>